--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,29 @@
 version: '3.8'
+
 services:
-  nlp-service:
+  nlp-app:
     build: .
     container_name: nlp-app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - redis-db
+    expose:
+      - "8000"
     environment:
       - REDIS_HOST=redis-db
       - REDIS_PORT=6379
+    depends_on:
+      - redis-db
     volumes:
       - huggingface_cache:/root/.cache/huggingface
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - nlp-app
+
   redis-db:
     image: redis:alpine
     container_name: redis-db
