feat: enable https with letsencrypt certificates

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,11 +4,21 @@ http {
     server {
         listen 80;
         server_name western-nlp.ddns.net;
+        return 301 https://$host$request_uri;
+    }
+    server {
+        listen 443 ssl;
+        server_name western-nlp.ddns.net;
+
+        ssl_certificate /etc/letsencrypt/live/western-nlp.ddns.net/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/western-nlp.ddns.net/privkey.pem;
 
         location / {
             proxy_pass http://nlp-app:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
