--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,6 +6,7 @@ http {
         server_name western-nlp.ddns.net;
         return 301 https://$host$request_uri;
     }
+
     server {
         listen 443 ssl;
         server_name western-nlp.ddns.net;
@@ -19,6 +20,11 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /metrics {
+            proxy_pass http://nlp-app:8000/metrics;
+            proxy_set_header Host $host;
         }
     }
 }
