--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: CI Pipeline
+
 on:
   push:
     branches: [ "main" ]
@@ -12,6 +13,7 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -21,6 +23,21 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings.
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+    - name: Security scan with Bandit
+      run: |
+        # -r: recursive, -ll: log level (shows only medium/high severity issues optional)
+        bandit -r . -f custom --msg-template "{abspath}:{line}: {test_id}[bandit]: {msg}"
+
+    # --------------------------------
 
     - name: Start Redis
       uses: supercharge/redis-github-action@1.7.0
