--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
             echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env
             echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
             echo "S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}" >> .env
+            echo "SERVER_API_KEY=${{ secrets.SERVER_API_KEY }}" >> .env
             
             # Configuring notification tokens
             sed -i "s|TOKEN_PLACEHOLDER|${{ secrets.TELEGRAM_TOKEN }}|g" alertmanager/config.yml
@@ -34,5 +35,8 @@ jobs:
             # Rebuild and start services
             docker compose up -d --build
             
-            # Clean up unused images and containers
+            # Clean up unused images
             docker system prune -f
+            
+            echo "Restarting Nginx to update upstream IPs..."
+            docker restart nginx-proxy
